# IA_VR_ANALYTICS

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARQUITECTURA.md  DETECCION_BOTS.md  GITHUB_SETUP.md  LICENSE  README.md  REFACTORING_SUMMARY.md  UnityVRAnalytics.cs  add_second_profesor.py  app.py  app.txt  build.sh  data_analytics.py  generate_test_data.py  init_render.py  migrate_db.py  migrate_db_production.py  migrate_profesional.py  models.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
WareXpert/: docker-compose.yml
WareXpert/.github/workflows/: ci.yml  deploy-staging.yml
WareXpert/backend/: .env.example  .gitignore  Dockerfile  alembic.ini  app.py  coverage.xml  init_database.py  pytest.ini  requirements.txt  seed_database.py
WareXpert/backend/app/: __init__.py
WareXpert/backend/app/models/: __init__.py  inventory.py  (+4 more)
WareXpert/backend/config/: __init__.py  development.py  production.py  testing.py
WareXpert/backend/migrations/: env.py
WareXpert/backend/tests/: __init__.py  conftest.py
analytics/: __init__.py  analyzer.py
analytics/core/: __init__.py  insights.py  statistics.py
analytics/ml/: __init__.py  clustering.py  predictive.py
analytics/utils/: __init__.py  converters.py
analytics/visualizations/: __init__.py  data_prep.py
docs/: PR-1-CORRECTIVO.md  PR-2-ADAPTATIVO.md  PR-2-FEATURE.md  PR-3-PERFECTIVO.md  PR-4-PREVENTIVO.md  RESUMEN-ACTIVIDAD.md  analisis-dependencias.md  linea-base-antes.md  plan-mantenimiento.md  reporte-final-sprint1.md
models/: __init__.py  base.py  estudiante.py  profesor.py  sesion.py
repositories/: __init__.py  estudiante_repository.py  profesor_repository.py  session_repository.py
routes/: __init__.py  api_routes.py  auth_routes.py  dashboard_routes.py  estudiante_routes.py  unity_routes.py
scripts/: add_database_indexes.py  add_second_profesor.py  generate_test_data.py  verificar_profesores.py
services/: __init__.py  analytics_service.py  auth_service.py  email_service.py  session_service.py
static/css/: auth.css  dashboard-estudiante.css  dashboard.css  index.css  manual-entry.css
static/js/: auth.js  bot-detection.js  dashboard-charts.js  dashboard-estudiante.js  dashboard.js  forgot-password.js  login.js  manual-entry.js  register.js  reset-password.js
templates/: dashboard.html  dashboard_estudiante.html  forgot_password.html  index.html  login.html  manual_entry.html  register.html  reset_password.html
tests/: README.md  conftest.py  test_analytics_service.py  test_compatibility.py  test_no_prints.py
utils/: __init__.py  bot_detector.py  constants.py  decorators.py  email_validator.py  extensions.py  logger.py  rate_limiter.py  recaptcha.py  validators.py
(+23 files in other folders)
