# pyproject.toml - Configuración del proyecto VR Analytics
# Issue #4 - Preventivo: Herramientas de calidad de código

[tool.black]
# Black formatter configuration
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.pytest_cache
  | __pycache__
  | \.venv
  | venv
  | env
  | instance
  | migrations
  | build
  | dist
  | \.eggs
  | \.tox
  | docs/_build
)/
'''

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=60"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
# Coverage configuration
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/env/*",
    "*/instance/*",
    "*/migrations/*",
    "migrate_*.py",
    "generate_test_data.py",
    "add_second_profesor.py"
]

[tool.coverage.report]
# Coverage report options
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.isort]
# Isort (import sorter) configuration
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".venv", "venv", "env", "instance", "migrations"]

[tool.mypy]
# MyPy (type checker) configuration - opcional para futuro
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[build-system]
# Build system (si fuera package)
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Project metadata
name = "vr-analytics"
version = "1.0.0"
description = "Sistema de Analytics para VR Unity - Gestión de sesiones de estudiantes"
authors = [
    {name = "VR Analytics Team"}
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/ZakuG/IA_VR_ANALYTICS"
"Bug Tracker" = "https://github.com/ZakuG/IA_VR_ANALYTICS/issues"
